Fix degree conversions, improve some plot methods

--- a/compare_densities.ipynb
+++ b/compare_densities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,7 @@
     "from pathlib import Path\n",
     "\n",
     "import numpy as np\n",
+    "import xarray as xr\n",
     "\n",
     "from pyplume import utils, plotting, constants\n",
     "from pyplume.dataloaders import load_geo_points\n",
@@ -29,20 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = {\n",
-    "    \"thredds_smoothn\": \"results/simulation_tijuana_hurrkay_alongshore_2022-10-31T13-18-57-smoothn/particlefile.nc\",\n",
-    "    \"Kay HFR\": \"results/simulation_tijuana_hurrkay_alongshore_2022-11-02T13-36-12-nosmoothn/particlefile.nc\",\n",
-    "    \"Kay OI\": \"results/simulation_tijuana_hurrkay_oi_alongshore_2022-10-31T13-18-58/particlefile.nc\",\n",
-    "    \"Henri HFR\": \"results/simulation_ny_hurrhenri_hfrnet_2022-11-16T16-18-48/particlefile.nc\",\n",
-    "    \"Henri HYCOM\": \"results/simulation_ny_hurrhenri_hycom_2022-11-16T16-18-48/particlefile.nc\",\n",
+    "result_dirs = {\n",
+    "    \"Kay HFR\": \"results/tijuana_hurrkay_2023-06-30T14-59-51/simulation_hfrnet uwls_2023-06-30T14-59-54\",\n",
+    "    \"Kay OI\": \"results/tijuana_hurrkay_2023-06-30T14-59-51/simulation_hfrnet oi_2023-06-30T14-59-55\",\n",
+    "    \"Henri HFR\": \"results/ny_hurrhenri_2023-06-30T16-22-57/simulation_hfrnet_2023-06-30T16-23-04\",\n",
+    "    \"Henri HYCOM\": \"results/ny_hurrhenri_2023-06-30T16-22-57/simulation_hycom_2023-06-30T16-23-04\",\n",
     "}\n",
     "to_compare = [\"Henri HFR\", \"Henri HYCOM\"]\n",
     "# to_compare = [\"Kay HFR\", \"Kay OI\"]\n",
-    "coast_lats, coast_lons = load_geo_points(\"data/coastOR2Mex_tijuana.mat\")\n",
+    "coast_lats, coast_lons = None, None\n",
+    "# coast_lats, coast_lons = load_geo_points(\"data/coastOR2Mex_tijuana.mat\")\n",
+    "results = {}\n",
+    "fields = {}\n",
     "\n",
     "# domain = constants.TIJUANA_RIVER_DOMAIN\n",
     "domain = {\"S\": 40.2, \"N\": 40.7, \"W\": -74.1, \"E\": -73.2}\n",
@@ -56,13 +59,15 @@
     "res_path = Path(f\"results/compare_density_{'_'.join(to_compare)}\")\n",
     "res_path.mkdir(exist_ok=True)\n",
     "\n",
-    "for key in results:\n",
-    "    results[key] = ParticleResult(results[key])"
+    "for name, path in result_dirs.items():\n",
+    "    resdir = Path(path)\n",
+    "    results[name] = ParticleResult(resdir / \"particlefile.nc\")\n",
+    "    fields[name] = xr.open_dataset(resdir / \"ocean_dataset_modified.nc\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,27 +89,32 @@
    "outputs": [],
    "source": [
     "for i, t in enumerate(common_timestamps):\n",
-    "    lats1, lons1 = results[to_compare[0]].get_positions_time(t, query=\"before\")\n",
-    "    lats2, lons2 = results[to_compare[1]].get_positions_time(t, query=\"before\")\n",
-    "    fig, (ax1, ax2) = plotting.carree_subplots((1, 2), domain=domain)\n",
+    "    c0 = to_compare[0]\n",
+    "    c1 = to_compare[1]\n",
+    "    lats1, lons1 = results[c0].get_positions_time(t, query=\"before\")\n",
+    "    lats2, lons2 = results[c1].get_positions_time(t, query=\"before\")\n",
+    "    fig, (ax1, ax2) = plotting.carree_subplots((1, 2), domain=domain, land=coast_lats is None)\n",
+    "    plotting.plot_vectorfield(fields[c0], show_time=\"average\", ax=ax1, color_speed=False)\n",
     "    plotting.plot_particle_density(\n",
     "        lats1,\n",
     "        lons1,\n",
     "        bins=100,\n",
     "        ax=ax1,\n",
     "        pmax=1,\n",
-    "        title=f\"{to_compare[0]} cumulative density at\\n{t.astype('datetime64[s]')}\",\n",
+    "        title=f\"{c0} cumulative density at\\n{t.astype('datetime64[s]')}\",\n",
     "    )\n",
-    "    # plotting.plot_coastline(coast_lats, coast_lons, ax=ax1, c=\"k\")\n",
+    "    plotting.plot_vectorfield(fields[c1], show_time=\"average\", ax=ax2, color_speed=False)\n",
     "    plotting.plot_particle_density(\n",
     "        lats2,\n",
     "        lons2,\n",
     "        bins=100,\n",
     "        ax=ax2,\n",
     "        pmax=1,\n",
-    "        title=f\"{to_compare[1]} cumulative density at\\n{t.astype('datetime64[s]')}\",\n",
+    "        title=f\"{c1} cumulative density at\\n{t.astype('datetime64[s]')}\",\n",
     "    )\n",
-    "    # plotting.plot_coastline(coast_lats, coast_lons, ax=ax2, c=\"k\")\n",
+    "    if coast_lats is not None:\n",
+    "        plotting.plot_coastline(coast_lats, coast_lons, ax=ax1, c=\"k\")\n",
+    "        plotting.plot_coastline(coast_lats, coast_lons, ax=ax2, c=\"k\")\n",
     "    strnum = str(i).zfill(3)\n",
     "    plotting.draw_plt(\n",
     "        savefile=res_path / f\"plot_{strnum}\", fig=fig, fit=True, figsize=(12, 6)\n",
@@ -113,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,6 +137,7 @@
     "    ).T\n",
     "    lats, lons = results[name].get_positions_time(t, query=\"before\")\n",
     "    fig, ax = plotting.carree_subplots((1, 1), domain=domain, land=True)\n",
+    "    # plotting.plot_vectorfield(fields[name], show_time=\"average\", ax=ax, color_speed=False)\n",
     "    plotting.plot_particle_density(\n",
     "        lats,\n",
     "        lons,\n",
@@ -135,6 +146,7 @@
     "        pmax=0.76,\n",
     "        title=f\"{name} cumulative density at\\n{t.astype('datetime64[s]')}\",\n",
     "    )\n",
+    "    # plotting.plot_vectorfield(fields[name], show_time=\"average\", ax=ax, color_speed=False, titlestr=False)\n",
     "    # plotting.plot_coastline(coast_lats, coast_lons, ax=ax, c=\"k\")\n",
     "    ax.scatter(starts[1], starts[0], marker=\"x\", c=\"r\")\n",
     "    plotting.draw_plt(\n",
@@ -162,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10 (default, Feb 26 2021, 10:16:00) \n[Clang 10.0.0 ]"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4,
   "vscode": {
