--- a/download_data.ipynb
+++ b/download_data.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -11,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +51,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -59,6 +61,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -77,44 +80,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "region_data = [\n",
+    "    {\n",
+    "        \"name\": \"hurrhenri_hycom\",\n",
+    "        \"url\": \"https://tds.hycom.org/thredds/dodsC/GLBy0.08/expt_93.0/uv3z\",\n",
+    "        \"time_range\": (\"2021-08-21T12:00\", \"2021-08-30T18:00\"),\n",
+    "        \"lat_range\": (38.162201, 41.520008),\n",
+    "        \"lon_range\": (284.290368, 290.276249),\n",
+    "        \"inclusive\": True,\n",
+    "        \"u_key\": \"water_u\",\n",
+    "        \"v_key\": \"water_v\",\n",
+    "        \"drop_vars\": [\"tau\"]\n",
+    "    },\n",
     "    # {\n",
-    "    #     \"name\": \"hurrhenri_hycom\",\n",
-    "    #     \"url\": \"https://tds.hycom.org/thredds/dodsC/GLBy0.08/expt_93.0/uv3z\",\n",
-    "    #     \"time_range\": (\"2021-08-21T12:00\", \"2021-08-23T18:00\"),\n",
-    "    #     \"lat_range\": (38.162201, 41.520008),\n",
-    "    #     \"lon_range\": (284.290368, 290.276249),\n",
+    "    #     \"name\": \"hurrkay_2km\",\n",
+    "    #     \"url\": \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/2km/hourly/RTV/HFRADAR_US_West_Coast_2km_Resolution_Hourly_RTV_best.ncd\",\n",
+    "    #     \"time_range\": [\"2022-09-08T06:00\", \"2022-09-12T00:00\"],\n",
+    "    #     \"lat_range\": (32.11093, 32.73124),\n",
+    "    #     \"lon_range\": (-118.565, -115.9924),\n",
     "    #     \"inclusive\": True,\n",
-    "    #     \"u_key\": \"water_u\",\n",
-    "    #     \"v_key\": \"water_v\",\n",
-    "    #     \"drop_vars\": [\"tau\"]\n",
     "    # },\n",
-    "    {\n",
-    "        \"name\": \"hurrkay_2km\",\n",
-    "        \"url\": \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/2km/hourly/RTV/HFRADAR_US_West_Coast_2km_Resolution_Hourly_RTV_best.ncd\",\n",
-    "        \"time_range\": [\"2022-09-08T06:00\", \"2022-09-12T00:00\"],\n",
-    "        \"lat_range\": (32.11093, 32.73124),\n",
-    "        \"lon_range\": (-118.565, -115.9924),\n",
-    "        \"inclusive\": True,\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"hurrkay_6km\",\n",
-    "        \"url\": \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/6km/hourly/RTV/HFRADAR_US_West_Coast_6km_Resolution_Hourly_RTV_best.ncd\",\n",
-    "        \"time_range\": [\"2022-09-08T06:00\", \"2022-09-12T00:00\"],\n",
-    "        \"lat_range\": (32.11093, 32.73124),\n",
-    "        \"lon_range\": (-118.565, -115.9924),\n",
-    "        \"inclusive\": True,\n",
-    "    },\n",
+    "    # {\n",
+    "    #     \"name\": \"hurrkay_6km\",\n",
+    "    #     \"url\": \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/6km/hourly/RTV/HFRADAR_US_West_Coast_6km_Resolution_Hourly_RTV_best.ncd\",\n",
+    "    #     \"time_range\": [\"2022-09-08T06:00\", \"2022-09-12T00:00\"],\n",
+    "    #     \"lat_range\": (32.11093, 32.73124),\n",
+    "    #     \"lon_range\": (-118.565, -115.9924),\n",
+    "    #     \"inclusive\": True,\n",
+    "    # },\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -147,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
