Update Parcels version, fix Parcels update issues, fix ParticleFile time data not NaT when particle is deleted, new codar simulation stuff

--- a/simulation_runner.ipynb
+++ b/simulation_runner.ipynb
@@ -27,8 +27,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
     "from pyplume.constants import CONFIGS_DIR\n",
-    "from pyplume.config_parser import load_config, prep_sim_from_cfg, process_results"
+    "from pyplume.config_parser import load_config, prep_sim_from_cfg, process_results\n",
+    "from pyplume.plotting_parcels import plotparticles\n",
+    "from pyplume.simulation import ParcelsSimulation"
    ]
   },
   {
@@ -49,10 +53,11 @@
    "source": [
     "configs = [\n",
     "    # \"huntington_all.yaml\",\n",
-    "    \"ny_hurrhenri.yaml\",\n",
+    "    # \"ny_hurrhenri.yaml\",\n",
     "    # \"tijuana_hurrkay.yaml\",\n",
     "    # \"palau-sarop-2023-03.yaml\",\n",
     "    # \"tijuana_example.yaml\",\n",
+    "    \"codar_sim_test.yaml\"\n",
     "]"
    ]
   },
@@ -65,7 +70,7 @@
    "outputs": [],
    "source": [
     "loaded_configs = [load_config(CONFIGS_DIR / path) for path in configs]\n",
-    "sims = []\n",
+    "sims: List[ParcelsSimulation] = []\n",
     "configs_copied = []\n",
     "for cfg in loaded_configs:\n",
     "    prepped = prep_sim_from_cfg(cfg)\n",
@@ -82,7 +87,7 @@
    "outputs": [],
    "source": [
     "for sim in sims:\n",
-    "    sim.pset.show(field=\"vector\")"
+    "    plotparticles(sim.pset, field=\"vector\")"
    ]
   },
   {
@@ -151,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.9"
   },
   "vscode": {
    "interpreter": {
