Fix __main__.py, update README with slightly better instructions

--- a/compare_cfgs.ipynb
+++ b/compare_cfgs.ipynb
@@ -73,7 +73,7 @@
    "source": [
     "sims = []\n",
     "for cfg in cfgs:\n",
-    "    sim = runner.prep_sim_from_cfg(cfg)\n",
+    "    sim = runner.prep_sims_from_cfg(cfg)\n",
     "    sims.append(sim)"
    ]
   },
