--- a/simulation_runner.ipynb
+++ b/simulation_runner.ipynb
@@ -30,7 +30,7 @@
     "from typing import List\n",
     "\n",
     "from pyplume.constants import CONFIGS_DIR\n",
-    "from pyplume.config_parser import load_config, prep_sim_from_cfg, process_results\n",
+    "from pyplume.config_parser import load_config, prep_sims_from_cfg, process_results\n",
     "from pyplume.plotting_parcels import plotparticles\n",
     "from pyplume.simulation import ParcelsSimulation"
    ]
@@ -57,7 +57,8 @@
     "    # \"tijuana_hurrkay.yaml\",\n",
     "    # \"palau-sarop-2023-03.yaml\",\n",
     "    # \"tijuana_example.yaml\",\n",
-    "    \"codar_sim_test.yaml\"\n",
+    "    # \"codar_sim_test.yaml\",\n",
+    "    \"vehicle_missing.yaml\"\n",
     "]"
    ]
   },
@@ -73,7 +74,7 @@
     "sims: List[ParcelsSimulation] = []\n",
     "configs_copied = []\n",
     "for cfg in loaded_configs:\n",
-    "    prepped = prep_sim_from_cfg(cfg)\n",
+    "    prepped = prep_sims_from_cfg(cfg)\n",
     "    sims.extend(prepped)\n",
     "    configs_copied.extend([cfg for _ in range(len(prepped))])"
    ]
