--- a/download_data.ipynb
+++ b/download_data.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,22 +80,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "region_data = [\n",
-    "    {\n",
-    "        \"name\": \"hurrhenri_hycom\",\n",
-    "        \"url\": \"https://tds.hycom.org/thredds/dodsC/GLBy0.08/expt_93.0/uv3z\",\n",
-    "        \"time_range\": (\"2021-08-21T12:00\", \"2021-08-30T18:00\"),\n",
-    "        \"lat_range\": (38.162201, 41.520008),\n",
-    "        \"lon_range\": (284.290368, 290.276249),\n",
-    "        \"inclusive\": True,\n",
-    "        \"u_key\": \"water_u\",\n",
-    "        \"v_key\": \"water_v\",\n",
-    "        \"drop_vars\": [\"tau\"]\n",
-    "    },\n",
+    "    # {\n",
+    "    #     \"name\": \"hurrhenri_hycom\",\n",
+    "    #     \"url\": \"https://tds.hycom.org/thredds/dodsC/GLBy0.08/expt_93.0/uv3z\",\n",
+    "    #     \"time_range\": (\"2021-08-21T12:00\", \"2021-08-30T18:00\"),\n",
+    "    #     \"lat_range\": (38.162201, 41.520008),\n",
+    "    #     \"lon_range\": (284.290368, 290.276249),\n",
+    "    #     \"inclusive\": True,\n",
+    "    #     \"u_key\": \"water_u\",\n",
+    "    #     \"v_key\": \"water_v\",\n",
+    "    #     \"drop_vars\": [\"tau\"]\n",
+    "    # },\n",
     "    # {\n",
     "    #     \"name\": \"hurrkay_2km\",\n",
     "    #     \"url\": \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/2km/hourly/RTV/HFRADAR_US_West_Coast_2km_Resolution_Hourly_RTV_best.ncd\",\n",
@@ -112,6 +112,14 @@
     "    #     \"lon_range\": (-118.565, -115.9924),\n",
     "    #     \"inclusive\": True,\n",
     "    # },\n",
+    "    {\n",
+    "        \"name\": \"east_1km_test\",\n",
+    "        \"url\": \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USEGC/1km/hourly/RTV/HFRADAR_US_East_and_Gulf_Coast_1km_Resolution_Hourly_RTV_best.ncd\",\n",
+    "        \"time_range\": [\"2022-09-01T00:00\", \"2022-12-01T00:00\"],\n",
+    "        \"lat_range\": (40.8839, 41.35225),\n",
+    "        \"lon_range\": (-72.1818, -71.4765),\n",
+    "        \"inclusive\": True,\n",
+    "    },\n",
     "]"
    ]
   },
@@ -130,13 +138,17 @@
     "    name = rd.pop(\"name\")\n",
     "    url = rd.pop(\"url\")\n",
     "    with dataloaders.DataLoader(url, **rd) as dl:\n",
-    "        dl.save(save_dir / f\"{name}.nc\")"
+    "        megabytes = dl.dataset.nbytes / 1e6\n",
+    "        print(f\"Downloading {name} ({megabytes:.2f} MB)...\")\n",
+    "        savepath = save_dir / f\"{name}.nc\"\n",
+    "        dl.save(savepath)\n",
+    "        print(f\"Saved to {savepath}\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.10 ('py3-parcels')",
+   "display_name": "py3-parcels",
    "language": "python",
    "name": "python3"
   },
@@ -150,12 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "0eba6c4b74a2f8ee4f11000f0a8df2ef42b87fd4ae75b12d527f1b8c08aad6c6"
-   }
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
